--- a/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.scss
+++ b/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.scss
@@ -5,3 +5,10 @@
   .table-operations > button {
     margin-right: 8px;
   }
+  .button-corner {
+    position: fixed;
+    bottom: 70px;
+    right: 42px;
+    display: flex;
+    justify-content: space-between;
+  }
