--- a/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
+++ b/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
@@ -43,10 +43,10 @@
                 </tr>
                 <div class="button-corner">
                     <nz-tag [nzColor]="'purple'">Page {{pageIndex}} of {{totalPages}}</nz-tag>
-                    <button nz-button nzType="primary" (click)="handlePreviousPage($event)"><i nz-icon
-                            nzType="arrow-left"></i></button>
-                    <button nz-button nzType="primary" (click)="handleNextPage($event)"><i nz-icon
-                            nzType="arrow-right"></i></button>
+                    <button nz-button nzType="primary" (click)="handlePreviousPage($event)"
+                        [disabled]="pageIndex === 1"><i nz-icon nzType="arrow-left"></i></button>
+                    <button nz-button nzType="primary" (click)="handleNextPage($event)"
+                        [disabled]="pageIndex === totalPages"><i nz-icon nzType="arrow-right"></i></button>
                 </div>
             </tbody>
         </nz-table>
