--- a/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
+++ b/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
@@ -35,7 +35,9 @@
                             <button nz-button nzType="primary" [routerLink]="['update/',data.attendanceId]"><i nz-icon
                                     nzType="edit" nzTheme="outline"></i></button>
                             <button nz-button nzType="primary"><i nz-icon nzType="delete" nzTheme="outline"
-                                    (click)="deleteAttendance(data.attendanceId)"></i></button>
+                                    nz-popconfirm nzPopconfirmTitle="Are you sure delete this task?"
+                                    (nzOnConfirm)="confirmDelete(data.attendanceId)" (nzOnCancel)="cancel()"
+                                    nzPopconfirmPlacement="leftBottom" nz-button></i></button>
                             <button nz-button nzType="primary"><i nz-icon nzType="fund-view"
                                     nzTheme="outline"></i></button>
                         </nz-button-group>
