--- a/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.scss
+++ b/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.scss
@@ -12,3 +12,10 @@
     display: flex;
     justify-content: space-between;
   }
+  .button {
+    margin-right: 8px;
+    margin-bottom: 8px;
+    width: 70px;
+    text-align: center;
+    padding: 0;
+  }
