--- a/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.scss
+++ b/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.scss
@@ -10,7 +10,7 @@
     bottom: 70px;
     right: 42px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
   .button {
     margin-right: 8px;
