--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,6 +57,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/work-week">Work Week</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/employee-training">Employee Training</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
