--- a/src/app/modules/hrm/employee-project/create-employee-project/create-employee-project.component.html
+++ b/src/app/modules/hrm/employee-project/create-employee-project/create-employee-project.component.html
@@ -1,35 +1,35 @@
 <nz-page-header-title>Project</nz-page-header-title>
 <form nz-form [formGroup]="projectForm" (ngSubmit)="onSubmit()">
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Project" nzRequired>Employee Project Name</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24">
-          <nz-select formControlName="EmployeeProjectName"  nzAllowClear nzPlaceHolder="Select Project Name">
-            <nz-option *ngFor="let project of _projectList" [nzLabel]="project.projectName" [nzValue]="project.projectName">{{project.projectName}}</nz-option>
-            </nz-select>
-      </nz-form-control>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Project" nzRequired>Employee Project Name</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <nz-select formControlName="EmployeeProjectName" nzAllowClear nzPlaceHolder="Select Project Name">
+        <nz-option *ngFor="let project of _projectList" [nzLabel]="project.projectName" [nzValue]="project.projectName">
+          {{project.projectName}}</nz-option>
+      </nz-select>
+    </nz-form-control>
   </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmployeeName" nzRequired>EmployeeName</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" >
-        <input nz-input type="text" formControlName="EmployeeName" id="EmployeeName" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Details" nzRequired>Details</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" >
-        <input nz-input type="text" formControlName="Details" id="Details"/>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmployeeId" nzRequired>Employee Id</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" >
-        <input nz-input type="text" formControlName="EmployeeId" id="EmployeeId"/>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item nz-row class="register-area">
-      <nz-form-control [nzSpan]="14" [nzOffset]="6">
-        <button nz-button nzType="primary">Save</button>
-      </nz-form-control>
-    </nz-form-item>
-  </form>
-  
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmployeeName" nzRequired>EmployeeName</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="EmployeeName" id="EmployeeName" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Details" nzRequired>Details</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="Details" id="Details" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmployeeId" nzRequired>Employee Id</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="EmployeeId" id="EmployeeId" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item nz-row class="register-area">
+    <nz-form-control [nzSpan]="14" [nzOffset]="6">
+      <button nz-button nzType="primary">Save</button>
+    </nz-form-control>
+  </nz-form-item>
+</form>
